add sticky on project container

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,9 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.container-sticky {
+  position: sticky!important;
+  top: 0px;
+  transform: translateY(105%);
+}
