--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,12 +17,12 @@ a {
 
 .sticky {
   position: sticky!important;
-  top: 0px!important;
+  top: 0!important;
 }
 
 /* Animations */
 
-.title {
+/* .title {
   top: 80px;
   transition: .3s;
   transition-timing-function: ease-in-out;
@@ -70,4 +70,4 @@ a {
 .in-viewport .screens {
   right: 0%;
   opacity: 1;
-}
+} */
