--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
 
 /* Animations */
 
-/* .title {
+.title {
   top: 80px;
   transition: .3s;
   transition-timing-function: ease-in-out;
@@ -71,4 +71,4 @@ a {
 .in-viewport .screens {
   right: 0%;
   opacity: 1;
-} */
+}
