--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,8 +84,8 @@ a {
 .screens {
   bottom: -30%!important;
   opacity: 0!important;
-  transition: .3s!important;
-  transition-delay: 1.5s!important;
+  transition: 1s!important;
+  transition-delay: 1.2s!important;
 }
 .in-viewport .screens {
   bottom: 0%!important;
