--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,3 +94,48 @@ a {
 }
 
 /* ------------------ End Animations */
+
+/* ------------------ Form */
+
+form {
+  opacity: 0;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  transition: 1s ease-in-out;
+}
+form.show {
+  opacity: 1;
+  bottom: 200x;
+}
+
+form label {
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+form input,
+form textarea {
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  color: #ffffff80;
+  border-color: #ffffff80;
+  border-radius: 10px;
+  background: transparent;
+  transition: .3s ease-in-out;
+}
+form input:hover,
+form input:focus,
+form textarea:hover,
+form textarea:focus {
+  color: #fff;
+  border-color: #fff;
+}
+
+form input[type="submit"] {
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+/* ------------------ End Form */
