--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,13 +100,13 @@ a {
 form {
   opacity: 0;
   position: absolute;
-  bottom: 0px;
+  bottom: -100px;
   left: 0px;
   transition: 1s ease-in-out;
 }
 form.show {
   opacity: 1;
-  bottom: 200x;
+  bottom: 0x;
 }
 
 form label {
@@ -137,6 +137,7 @@ form textarea:focus {
 form input[type="submit"] {
   font-weight: 700;
   letter-spacing: 2px;
+  color: #fff;
 }
 
 /* ------------------ End Form */
