--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,12 +100,14 @@ a {
 form {
   opacity: 0;
   position: absolute;
+  z-index: -1;
   bottom: -100px;
   left: 0px;
   transition: 1s ease-in-out;
 }
-form.opened {
+.opened form {
   opacity: 1;
+  z-index: 0;
   bottom: 0x;
 }
 
